<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/novocadastro"
            android:title="@string/menu_cadastro_veiculo" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/carrinhos"
            android:title="@string/menu_servicos" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/sobre"
            android:title="@string/menu_sobre" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/mapas"
            android:title="@string/menu_onde_estamos" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_compartilhar_conteudo" />

        </menu>
    </item>

</menu>
