<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/enter_Titular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_titular" />


    <EditText
        android:id="@+id/enter_Cpf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_CPF" />


    <EditText
        android:id="@+id/enter_Placa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_placa" />


    <EditText
        android:id="@+id/enter_cor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_cor" />


    <EditText
        android:id="@+id/enter_modelo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_modelo" />

</LinearLayout>