<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="4dp"
    android:background="@drawable/gradiente_background"
    app:cardBackgroundColor="#c3f7fbd8"
    app:cardCornerRadius="3dp"
    app:cardElevation="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="305dp"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        android:padding="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="14.00dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_titular_add"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtTitular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:text="@string/txt_titular" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="14.00dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_CPF_add"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtCPF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:text="@string/txt_CPF" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="14.00dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_placa_add"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtPlaca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:text="@string/txt_placa" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="14.00dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_cor_add"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtCor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:text="@string/txt_cor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="14.00dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_modelo_add"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtModelo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:text="@string/txt_modelo" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="14.00dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3" />


            <ImageView
                android:id="@+id/Imgeditar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:contentDescription="@string/app_name"
                android:src="@drawable/editar" />

            <ImageView
                android:id="@+id/Imgdeletar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/app_name"
                android:src="@drawable/deletar" />

        </LinearLayout>


    </LinearLayout>


</android.support.v7.widget.CardView>
